menyelesaikan download Surat Pengantar, lengkap dengan QR Codenya | menyederhanakan dari Riz, dengan mempersimpel kode yg ada, ddan menghapus file temporary untuk Template Processor

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 
 	"require": {
 		"php": ">=5.3.7",
-		"phpoffice/phpword": "^0.18.3"
+		"phpoffice/phpword": "^0.18.3",
+		"chillerlan/php-qrcode": "^4.3"
 	}
 }
