--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,9 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 ##tambahan riyan
 zoutside/
 ##perlu ditambahkan
-# application/config/config.php
-# application/config/database.php
-# /.htaccess
+application/config/config.php
+application/config/database.php
+/.htaccess
 /files/bundle_a/*
 /files/bundle_b/*
 /files/files_laporan/*
