--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 zoutside/
 ##perlu ditambahkan
 application/config/config.php
-application/config/database.php
+# application/config/database.php
 /.htaccess
 # /files/bundle_a/*
 # /files/bundle_b/*
